test/good/automatic/base/without_input/ret_zero/0052.lat
/* Should evaluate if clause. */

int main() {
  if(0 < 10 - 3)
    return 0 ;
}
