test/bad/automatic/base/compile_time/0059.lat

int main() {
  if (10 > 20 + 20/(10 - 10))
    return 2;
  return 0;
}
